[gd_scene load_steps=8 format=3 uid="uid://c0y5akga5jdf8"]

[ext_resource type="Texture2D" uid="uid://hhade5yrjyx8" path="res://1814881.png" id="1_kempu"]
[ext_resource type="Script" path="res://creatures/player/show_inventory.gd" id="1_vht80"]
[ext_resource type="Texture2D" uid="uid://iln8ppp6lqfn" path="res://kisspng-computer-icons-archer-font-archer-5ac4f4cf107fd6.1112710615228571670676.jpg" id="2_ha6gc"]
[ext_resource type="Texture2D" uid="uid://c7wlxjvr0sae3" path="res://kladka-kirpich-kraska-tekstura.jpg" id="2_pl3ne"]
[ext_resource type="Texture2D" uid="uid://dtvkhqu4ar717" path="res://icon.svg" id="2_y81y1"]
[ext_resource type="Texture2D" uid="uid://c3x87dy6jbdap" path="res://kisspng-sword-computer-icons-clip-art-ice-axe-5acbd9f2176393.4286623915233090420958.jpg" id="3_ayf8l"]
[ext_resource type="Texture2D" uid="uid://dm4i33dgx800p" path="res://pusto.png" id="7_qkh6g"]

[node name="show_inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vht80")

[node name="Kladka-kirpich-kraska-tekstura" type="Sprite2D" parent="."]
position = Vector2(489, 323)
scale = Vector2(0.7625, 1.19395)
texture = ExtResource("2_pl3ne")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(169, 402)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(275, 403)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(356, 406)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(170, 503.6)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(276, 505.6)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D6" type="Sprite2D" parent="."]
position = Vector2(358.5, 504)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D7" type="Sprite2D" parent="."]
position = Vector2(171.5, 592.5)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D8" type="Sprite2D" parent="."]
position = Vector2(276, 592)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D9" type="Sprite2D" parent="."]
position = Vector2(358.5, 589.5)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D10" type="Sprite2D" parent="."]
position = Vector2(739, 405)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D11" type="Sprite2D" parent="."]
position = Vector2(834, 406)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D12" type="Sprite2D" parent="."]
position = Vector2(940, 406)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D13" type="Sprite2D" parent="."]
position = Vector2(730.5, 508)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D14" type="Sprite2D" parent="."]
position = Vector2(833.5, 506)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D15" type="Sprite2D" parent="."]
position = Vector2(938.5, 503.5)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D16" type="Sprite2D" parent="."]
position = Vector2(729, 597)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D17" type="Sprite2D" parent="."]
position = Vector2(831, 597)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Sprite2D18" type="Sprite2D" parent="."]
position = Vector2(933, 598)
scale = Vector2(0.492188, 0.523438)
texture = ExtResource("2_y81y1")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 135.2
offset_top = 366.4
offset_right = 207.2
offset_bottom = 438.4
icon = ExtResource("3_ayf8l")

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 237.6
offset_top = 366.0
offset_right = 309.6
offset_bottom = 438.0
text = "пусто"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 370.0
offset_right = 393.0
offset_bottom = 442.0

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 469.0
offset_right = 207.0
offset_bottom = 541.0
icon = ExtResource("2_ha6gc")

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 244.0
offset_top = 472.6
offset_right = 316.0
offset_bottom = 544.6
icon = ExtResource("1_kempu")

[node name="Button6" type="Button" parent="."]
layout_mode = 0
offset_left = 327.5
offset_top = 473.0
offset_right = 385.5
offset_bottom = 504.0
text = "empty"

[node name="Button7" type="Button" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 560.0
offset_right = 206.0
offset_bottom = 625.0
text = "ХЗ
оружка"

[node name="Button8" type="Button" parent="."]
layout_mode = 0
offset_left = 244.0
offset_top = 558.0
offset_right = 302.0
offset_bottom = 589.0
text = "empty"

[node name="Button9" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 560.0
offset_right = 388.0
offset_bottom = 591.0
text = "empty"

[node name="Button10" type="Button" parent="."]
layout_mode = 0
offset_left = 708.0
offset_top = 372.0
offset_right = 766.0
offset_bottom = 403.0
text = "empty"

[node name="Button11" type="Button" parent="."]
layout_mode = 0
offset_left = 806.0
offset_top = 376.0
offset_right = 864.0
offset_bottom = 407.0
text = "empty"

[node name="Button12" type="Button" parent="."]
layout_mode = 0
offset_left = 909.0
offset_top = 374.0
offset_right = 967.0
offset_bottom = 405.0
text = "empty"

[node name="Button13" type="Button" parent="."]
layout_mode = 0
offset_left = 701.5
offset_top = 475.0
offset_right = 759.5
offset_bottom = 506.0
text = "empty"

[node name="Button14" type="Button" parent="."]
layout_mode = 0
offset_left = 806.5
offset_top = 470.0
offset_right = 864.5
offset_bottom = 501.0
text = "empty"

[node name="Button15" type="Button" parent="."]
layout_mode = 0
offset_left = 910.5
offset_top = 470.5
offset_right = 968.5
offset_bottom = 501.5
text = "empty"

[node name="Button16" type="Button" parent="."]
layout_mode = 0
offset_left = 696.0
offset_top = 563.0
offset_right = 754.0
offset_bottom = 594.0
text = "empty"

[node name="Button17" type="Button" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 566.0
offset_right = 858.0
offset_bottom = 597.0
text = "empty"

[node name="Button18" type="Button" parent="."]
layout_mode = 0
offset_left = 906.0
offset_top = 564.0
offset_right = 964.0
offset_bottom = 595.0
text = "empty"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 378.0
offset_right = 95.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Мечи"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 481.0
offset_right = 96.0
offset_bottom = 523.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Луки"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 570.0
offset_right = 103.0
offset_bottom = 612.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Книги"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 380.0
offset_right = 665.0
offset_bottom = 422.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Тяжелая броня"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 483.0
offset_right = 666.0
offset_bottom = 525.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Средняя броня"

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 572.0
offset_right = 642.0
offset_bottom = 614.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Легкая броня"

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 56.0
offset_right = 122.0
offset_bottom = 98.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Оружие
"

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 159.0
offset_right = 123.0
offset_bottom = 201.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Броня"

[node name="Label9" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 248.0
offset_right = 130.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Аксесуары"

[node name="Sprite2D_weaon" type="Sprite2D" parent="."]
position = Vector2(278, 83)
texture = ExtResource("7_qkh6g")

[node name="Sprite2D_armor" type="Sprite2D" parent="."]
position = Vector2(272, 182)
texture = ExtResource("7_qkh6g")

[node name="Sprite2D_tinket_1" type="Sprite2D" parent="."]
position = Vector2(277, 270)
texture = ExtResource("7_qkh6g")

[node name="Sprite2D_tinket_2" type="Sprite2D" parent="."]
position = Vector2(396, 270)
texture = ExtResource("7_qkh6g")

[node name="Sprite2D_tinket_3" type="Sprite2D" parent="."]
position = Vector2(510, 268)
texture = ExtResource("7_qkh6g")

[node name="Sprite2D_tinket_4" type="Sprite2D" parent="."]
position = Vector2(622, 267)
texture = ExtResource("7_qkh6g")

[node name="Sprite2D_tinket_5" type="Sprite2D" parent="."]
position = Vector2(742, 268)
texture = ExtResource("7_qkh6g")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="Button11" to="." method="_on_button_11_pressed"]
[connection signal="pressed" from="Button12" to="." method="_on_button_12_pressed"]
[connection signal="pressed" from="Button13" to="." method="_on_button_13_pressed"]
[connection signal="pressed" from="Button14" to="." method="_on_button_14_pressed"]
[connection signal="pressed" from="Button15" to="." method="_on_button_15_pressed"]
[connection signal="pressed" from="Button16" to="." method="_on_button_16_pressed"]
[connection signal="pressed" from="Button17" to="." method="_on_button_17_pressed"]
[connection signal="pressed" from="Button18" to="." method="_on_button_18_pressed"]
